[tool.poetry]
name = "curvewalk"
version = "0.3.0"
description = ""
authors = ["Mark Goodall <mark.goodall@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.405"
pytest = "^8.4.1"
commitizen = "^4.8.3"
ruff = "^0.13.1"
pytest-cov = "^6.2.1"
hypothesis = "^6.138.5"
numpy = "^2.3.3"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.18"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
matplotlib = "^3.10.3"
pyqt6 = "^6.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[tool.pyright]
typeCheckingMode = "basic"
# Use the venv directory for type checking so the types exist
venvPath = "."
venv = ".venv"

[tool.interrogate]
exclude = ["tests"]
ignore-module = true
omit-covered-files = true
