[tool.poetry]
name = "curvewalk"
version = "0.4.0"
description = ""
authors = ["Mark Goodall <mark.goodall@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.407"
pytest = "^9.0.2"
commitizen = "^4.12.0"
ruff = "^0.14.13"
pytest-cov = "^7.0.0"
hypothesis = "^6.150.2"
numpy = "^2.3.5"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"
mkdocstrings = {extras = ["python"], version = "^1.0.0"}
matplotlib = "^3.10.8"
pyqt6 = "^6.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[tool.pyright]
typeCheckingMode = "basic"
# Use the venv directory for type checking so the types exist
venvPath = "."
venv = ".venv"

[tool.interrogate]
exclude = ["tests"]
ignore-module = true
omit-covered-files = true
